--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -20,27 +20,35 @@
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                                     <div class="card-body">
-                                        <form>
+                                        <form action="validarLogin" method="post">
                                             <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
-                                                <label for="inputEmail">Email address</label>
+                                                <input class="form-control" id="logi" name="logi" type="text" placeholder="Usuario" required />
+                                                <label for="logi">Usuario</label>
                                             </div>
                                             <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputPassword" type="password" placeholder="Password" />
-                                                <label for="inputPassword">Password</label>
+                                                <input class="form-control" id="pass" name="pass" type="password" placeholder="Contraseña" required />
+                                                <label for="pass">Contraseña</label>
                                             </div>
                                             <div class="form-check mb-3">
                                                 <input class="form-check-input" id="inputRememberPassword" type="checkbox" value="" />
-                                                <label class="form-check-label" for="inputRememberPassword">Remember Password</label>
+                                                <label class="form-check-label" for="inputRememberPassword">Recordar contraseña</label>
                                             </div>
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                <a class="small" href="password.html">Forgot Password?</a>
-                                                <a class="btn btn-primary" href="index.html">Login</a>
+                                                <a class="small" href="password.html">¿Olvidaste tu contraseña?</a>
+                                                <button class="btn btn-primary" type="submit">Login</button>
                                             </div>
+                                            <!-- Mensaje de error opcional (solo si usas JSP) -->
+                                            <!--
+                                            <div class="mt-3 text-danger text-center">
+                                                <% if (request.getAttribute("error") != null) { %>
+                                                    <%= request.getAttribute("error") %>
+                                                <% } %>
+                                            </div>
+                                            -->
                                         </form>
                                     </div>
                                     <div class="card-footer text-center py-3">
-                                        <div class="small"><a href="register.html">Need an account? Sign up!</a></div>
+                                        <div class="small"><a href="register.html">¿Necesitas una cuenta? Regístrate</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -54,9 +62,9 @@
                         <div class="d-flex align-items-center justify-content-between small">
                             <div class="text-muted">Copyright &copy; Your Website 2023</div>
                             <div>
-                                <a href="#">Privacy Policy</a>
+                                <a href="#">Política de Privacidad</a>
                                 &middot;
-                                <a href="#">Terms &amp; Conditions</a>
+                                <a href="#">Términos &amp; Condiciones</a>
                             </div>
                         </div>
                     </div>
